--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ background-size: 20px 20px;
 <input type="password" id="loginToken" placeholder="********" class="w-full mt-1 px-5 py-4 bg-slate-50 border border-slate-200 rounded-2xl text-base md:text-sm focus:outline-none transition-all font-mono text-slate-800 focus:border-blue-500 focus:ring-2 focus:ring-blue-200">
 </div>
 <div id="room-creation-area" class="pt-4 border-t border-slate-100">
-<button onclick="showNotesModal()" class="w-full mb-4 whitespace-nowrap px-4 py-3 bg-white border border-red-200 text-red-500 rounded-xl text-[10px] font-black uppercase tracking-widest hover:bg-red-50 transition-all shadow-sm">KP向け諸注意</button>
+<button onclick="showNotesModal()" class="w-full mb-4 whitespace-nowrap px-4 py-3 bg-white border border-red-200 text-red-500 rounded-xl text-[10px] font-black uppercase tracking-widest hover:bg-red-50 transition-all shadow-sm">KP向け取扱説明書</button>
 <label class="text-[10px] font-black text-slate-400 uppercase tracking-widest ml-1">接続ルームID (Room Connection)</label>
 <div class="mt-1">
 <button onclick="createNewRoom()" class="w-full whitespace-nowrap px-4 py-3 bg-slate-800 text-white rounded-xl text-[10px] font-black uppercase tracking-widest hover:bg-slate-700 transition-all shadow-lg shadow-slate-200">新規発行</button>
@@ -1475,7 +1475,7 @@ function handleLogin() {
     const idVal = document.getElementById('loginId').value;
     const tokenVal = document.getElementById('loginToken').value;
 
-    if (!isLoginEnabled) {
+    if (roomId && !isLoginEnabled) {
         showToast("ACCESS DENIED: 端末はセッション開始までロックされています");
         return;
     }
