--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ background-size: 20px 20px;
 </div>
 
 <!-- SCREEN 2: PATIENT LIST -->
-<div id="screen-list" class="screen h-screen w-screen flex-col bg-slate-50">
+<div id="screen-list" class="screen h-[100dvh] w-screen flex-col bg-slate-50">
 <header class="bg-white border-b border-slate-200 p-4 md:p-6 flex flex-col md:flex-row justify-between items-center shadow-sm gap-4">
 <div class="flex items-center gap-4">
 <div class="bg-blue-600 p-2 rounded-xl text-white"><i data-lucide="activity" class="w-6 h-6"></i></div>
@@ -153,7 +153,7 @@ background-size: 20px 20px;
 </div>
 </header>
 
-<main class="flex-1 overflow-y-auto p-4 md:p-10">
+<main class="flex-1 overflow-y-auto p-4 md:p-10 pb-32 md:pb-10">
 <div class="max-w-6xl mx-auto">
 <div class="flex justify-between items-end mb-8">
 <div>
@@ -176,7 +176,7 @@ background-size: 20px 20px;
 <tbody id="patientListBody" class="divide-y divide-slate-50"></tbody>
 </table>
 </div>
-<div class="flex justify-center gap-4 mt-8">
+<div class="fixed bottom-0 left-0 right-0 p-4 bg-white/90 backdrop-blur-md border-t border-slate-200 flex justify-center gap-4 md:static md:bg-transparent md:border-none md:p-0 md:mt-8 z-10 shadow-[0_-4px_6px_-1px_rgba(0,0,0,0.1)] md:shadow-none">
 <button onclick="setPage(1)" id="btnPage1" class="px-6 py-3 rounded-xl font-black transition-all bg-blue-600 text-white shadow-lg shadow-blue-200 text-xs uppercase tracking-widest">Page 1</button>
 <button onclick="setPage(2)" id="btnPage2" class="px-6 py-3 rounded-xl font-black transition-all bg-white text-slate-400 hover:bg-slate-100 text-xs uppercase tracking-widest">Page 2</button>
 </div>
